[package]
name = "window-overlay"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
anyhow = "1.0.40"
winapi = { version = "*", features = ["winuser", "uxtheme", "processthreadsapi", "memoryapi"] }
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
glutin = "0.26.0"
glium = "0.29.1"
imgui-glium-renderer = "0.7.0"
log = "0.4.14"
clipboard = "0.5.0"

[patch.crates-io]
winit = { path = "custom-winit" }
